--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "fs": "0.0.1-security",
     "playwright": "^0.9.24"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^25.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
