--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "playwright": "^0.9.24"
   },
   "devDependencies": {
-    "jest": "^25.1.0"
+    "chalk": "^3.0.0",
+    "jest": "^25.1.0",
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.1"
   },
   "scripts": {
     "test": "jest"
