--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "fs": "0.0.1-security",
+    "minimist": "^1.2.0",
     "playwright": "^0.9.24"
   },
   "devDependencies": {
