--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "chalk": "^3.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "jest": "^25.1.0",
     "jest-image-snapshot": "^2.12.0",
     "jest-stare": "^1.26.0",
