--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "A skeleton repository of the Playwright automation testing framework integrated with Jest",
   "main": "index.js",
   "dependencies": {
+    "chalk": "^3.0.0",
     "fs": "0.0.1-security",
+    "jest-environment-node": "^25.1.0",
     "minimist": "^1.2.0",
-    "playwright": "^0.9.24"
+    "mkdirp": "^1.0.3",
+    "playwright": "^0.9.24",
+    "rimraf": "^3.0.1"
   },
   "devDependencies": {
-    "chalk": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
     "jest": "^25.1.0",
     "jest-image-snapshot": "^2.12.0",
     "jest-stare": "^1.26.0",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.1"
+    "prettier": "^1.19.1"
   },
   "scripts": {
     "test": "jest"
